// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1 List item with all the props 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="section"
    >
      <div
        class="sectionHeader"
      >
        <h4
          class="base bold large"
        >
          Notification
        </h4>
      </div>
      <ul
        class="list"
      >
        <li
          class="item"
        >
          <a
            class="action isActive hoverable"
            href="#"
            id="1"
          >
            <div
              class="icon"
            >
              <span
                class="Z6OfUI2sH34- TphtDHcwxDc-"
                style="transform: none;"
              >
                <svg
                  class="Z6OfUI2sH34- TphtDHcwxDc-"
                  data-testid="checkmark"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="kBAjqBTXEsI- S4fBuUx-A70-"
                    d="M4.703 12.029a1 1 0 1 0-1.414 1.414l4.699 5.293a1 1 0 0 0 1.414 0L20.695 7.443a1 1 0 1 0-1.414-1.414L8.695 16.615l-3.992-4.586Z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="info"
            >
              <h5
                class="base bold base heading"
              >
                Jordan Yeo completed a visit
              </h5>
              <p
                class="base regular base text"
              >
                <span
                  class="truncate"
                >
                  Build a deck
                </span>
              </p>
              <p
                class="base regular base text"
              >
                <span
                  class="truncate"
                >
                  Fa la la la la
                </span>
              </p>
              <p
                class="base regular base textSecondary"
              >
                <span
                  class="base regular small italic"
                >
                  Sep 24, 2019
                </span>
              </p>
            </div>
            <div
              class="amount"
            >
              <p
                class="base regular base text"
              >
                <b
                  class="base bold"
                >
                  $30.00
                </b>
              </p>
            </div>
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`should render a button list item 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      <button
        class="action hoverable"
        id="1"
        role="button"
        type="button"
      >
        <div
          class="info"
        >
          <p
            class="base regular base text"
          >
            <span
              class="truncate"
            >
              Click me
            </span>
          </p>
        </div>
      </button>
    </li>
  </ul>
</div>
`;

exports[`should render a link with url list item 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      <a
        class="action hoverable"
        href="/path/to/stuff"
        id="1"
      >
        <div
          class="info"
        >
          <p
            class="base regular base text"
          >
            <span
              class="truncate"
            >
              Learn more
            </span>
          </p>
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render an a tag with url and on click list item 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      <a
        class="action hoverable"
        href="/path/to/stuff"
        id="1"
      >
        <div
          class="info"
        >
          <p
            class="base regular base text"
          >
            <span
              class="truncate"
            >
              Learn more
            </span>
          </p>
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`shouldn't render a list item if it's given an empty array 1`] = `
<div>
  <ul
    class="list"
  />
</div>
`;
